tests/fail/ch_stable/missing_traits.stderr
error[E0277]: the trait bound `Test: RegexRepresentation` is not satisfied
  --> $DIR/missing_traits.rs:11:32
   |
11 |     sscanf::scanf!("hi", "{}", Test);
   |                                ^^^^ the trait `RegexRepresentation` is not implemented for `Test`
   |
note: required by `sscanf::RegexRepresentation::REGEX`
  --> $DIR/regex_representation.rs:82:5
   |
82 |     const REGEX: &'static str;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Vec<usize>: RegexRepresentation` is not satisfied
  --> $DIR/missing_traits.rs:10:32
   |
10 |     sscanf::scanf!("hi", "{}", std::vec::Vec<usize>);
   |                                ^^^^^^^^^^^^^^^^^^^^ the trait `RegexRepresentation` is not implemented for `Vec<usize>`
   |
note: required by `sscanf::RegexRepresentation::REGEX`
  --> $DIR/regex_representation.rs:82:5
   |
82 |     const REGEX: &'static str;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
